[package]
name = "mozidump"
description = "Extract the contents of Firefox’s IndexedDB into JSON format"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
snap = "1.1.1"

[profile.samply]
inherits = "release"
debug = true
